src/test/ui/huge-array-simple-64.stderr
error: the type `[u8; 2305843011361177600]` is too big for the current architecture
  --> $DIR/huge-array-simple-64.rs:10:9
   |
LL |     let _fat: [u8; (1<<61)+(1<<31)] =
   |         ^^^^

error: aborting due to previous error

